test/cli/test-validating-policy/empty-message/pod-pass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-good
spec:
  containers:
  - name: nginx
    image: nginx:latest
